--- a/API-Gateway/src/main/resources/application.yml
+++ b/API-Gateway/src/main/resources/application.yml
@@ -21,6 +21,11 @@ spring:
           predicates:
             - Path=/inventory-service/**
 
+        - id: customer-service
+          uri: http://localhost:5000
+          predicates:
+            - Path=/customer-service/**
+
 eureka:
   client:
     service-url:
